# facelift

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  setup_gtest.sh
cmake/: faceliftMacros.cmake
cmake/facelift/: unity_generator.py
src/common/: span.h
src/ipc/ipc-common/: IPCProxy.h
tests/unittest/: CMakeLists.txt  testList.cmake
